<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="check_for_updates_url">http://github.com/TodorBalabanov/FourRowSolitaire</string>
    <string name="ebinqo_url">http://ebinqo.com/</string>
    <string name="app_name">Four Row Solitaire</string>
    <string name="new_game_button">New Game</string>
    <string name="undo_last_move_button">Undo Last Move</string>
    <string name="hint_button">Hint</string>
    <string name="statistics_button">Statistics</string>
    <string name="settings_button">Settings</string>
    <string name="best_times_button">Best Times</string>
    <string name="view_help_button">View Help</string>
    <string name="about_game_button">About Game</string>
    <string name="check_for_updates_button">Check for Updates</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_about_game">About Game</string>
    <string name="about_game_ok">OK</string>
    <string name="about_game_text">Four Row Solitaire was published by Velbazhd Software LLC\n\nFour Row Solitaire was created by Matt Stephe.\nProgramming by Matt Stephen, Todor Balabanov, Konstantin Tsanov and Ventsislav Medarov.\nGraphics by Vanya Gyaurova, Plamena Popova, Hristiana Kalcheva and Yana Genova.\n\nYou can modify this code in accordance with GPL v3.0.\n\nTo check if there is a newer version, go to: \nhttp://www.github.com/TodorBalabanov/FourRowSolitaire/\n\n\nI would like to dedicate this work to my ex-girlfriend Zornitsa Radeva, with who I have had some of the most beautiful moments in my life. Thank you Zori, for every second that you have shared with me. Forever in my heart there will be special place for you. Todor Balabanov</string>
    <string name="title_activity_help">View Help</string>
    <string name="help_ok">OK</string>
    <string name="help_text">This game is a mixture of FreeCell and normal (Klondike) Solitaire.\n\nSimilarities to FreeCell:\n   -The Cards in the columns are always visible\n   -There are four individual cells at the top\n\nSimilarities to Solitaire:\n   -There is a deck and discard pile to draw cards from\n   -Only Kings may be placed at the top of an empty column\n   -Cards may be removed from the Ace piles and placed back onto the playing field\n   -Any number of cards can be moved in one move (as long as they are stacked as in Solitaire\n\nFeatures unique to this game:\n   -The four individual cells start with cards in them\n   -You may only go through the deck twice on draw one and three times on draw three\n   -The obvious: there are only four columns, not 7 or 8 as in Solitaire and FreeCell, respectively</string>
    <string name="title_activity_best_times">Best Times</string>
    <string name="clear_times_button">Clear Times</string>
    <string name="best_times_ok">OK</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="statistics_ok">OK</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_game">Four Row Solitaire</string>
    <string name="title_activity_statistics_tab0">Statistics 1E</string>
    <string name="title_activity_statistics_tab1">Statistics 3E</string>
    <string name="title_activity_statistics_tab2">Statistics 1M</string>
    <string name="title_activity_statistics_tab3">Statistics 3M</string>
    <string name="title_activity_statistics_tab4">Statistics 1H</string>
    <string name="title_activity_statistics_tab5">Statistics 3H</string>
    <string name="new_option">New</string>
    <string name="undo_option">Undo</string>
    <string name="hint_option">Hint</string>
    <string name="title_activity_win">You Win!</string>
    <string name="title_activity_splash">Four Row Solitaire</string>
    <string name="redirect_activity_is_missing_message">Redirect activity is missing!</string>

</resources>